[package]
name = "solid"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solid"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tiny_http = "0.12"
open = "5"
anyhow = "1"
dirs = "5"

[profile.release]
strip = true
opt-level = "z"
lto = true
